--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.10.2",
     "react-scroll": "^1.9.0",
+    "react-scroll-parallax": "^3.4.5",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
@@ -30,6 +33,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-scroll": "^1.8.10",
+    "@types/react-slick": "^0.23.13",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
